--- a/src/app/pull-requests/pull-requests.component.css
+++ b/src/app/pull-requests/pull-requests.component.css
@@ -1,34 +1,65 @@
-.container-fluid {
+a {
+  text-decoration: none;
   color: black;
-  margin-top: 100px;
-  max-width: 1280px;
-  height: 100%;
+}
+
+.container {
+  color: black;
+  margin-top: 50px;
+}
+
+.goBack {
+  margin-bottom: 30px;
+  cursor: pointer;
 }
 
 .pullImage {
-  width: 250px;
-  height: 250px;
-  margin: auto auto 10px auto;
-  border: 1px solid black;
-  border-radius: 500px;
+  width: 46px;
+  height: 46px;
+  margin: 5px 20px;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 .row {
-  margin-bottom: 30px;
-  border-bottom: 3px solid black;
+  margin-bottom: 80px;
+  min-width: 700px;
 }
 
-.col-md-3{
-    border: 1px solid blue;
-    padding: 20px;
+.col-md-12 {
+  overflow: scroll;
+  border: 1px solid #bbc0da00;
+  min-height: 100px;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(209, 213, 218);
+  min-width: 500px;
+  cursor: pointer;
 }
 
-.col-md-9{
-    overflow: scroll;
-    border: 1px solid green;
-
+.col-md-12 .row {
+  margin-bottom: 0px;
+  padding: 5px 20px;
+  border: 1px solid rgb(209, 213, 218);
+  background-color: rgb(246, 248, 250);
 }
 
-::-webkit-scrollbar { 
-    display: none; 
+.title {
+  font-size: 25px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+}
+
+.body {
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 20px 30px;
+  text-align: justify;
+}
+
+.name {
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin-top: 10px;
 }
