--- a/src/app/repositories-list/repositories-list.component.html
+++ b/src/app/repositories-list/repositories-list.component.html
@@ -1,33 +1,38 @@
 <div class="container-fluid">
+  <h1> Github API com Angular 7</h1>
+
+
   <div class="row" style="height: 90%" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="1000"
     (scrolled)="onScroll()">
 
-    <div class="col-md-3" *ngFor="let rep of repositories" routerLink="/pullrequests/{{rep.owner.login}}/{{rep.name}}"> 
+    <div class="col-md-3" *ngFor="let rep of repositories" routerLink="/pullrequests/{{rep.owner.login}}/{{rep.name}}">
 
-      <div class="row">
+      <div class="col d-flex justify-content-center">
         <img class="repositories" [src]="rep.owner.avatar_url">
       </div>
 
-      <div class="row">
-        <div class="col-md-6">
-          <img src="../../assets/star.png" class="icon">
-          <p> {{rep.stargazers_count}}</p>
-        </div>
-
-
-        <div class="col-md-6">
-          <img src="../../assets/fork.png" class="icon">
-          <p> {{rep.forks}}</p>
+      <div class="col">
+        <div class="row d-flex justify-content-center">
+          <div class="col-md-6 d-flex justify-content-center">
+            <img src="../../assets/star.png" class="icon">
+            <p> {{rep.stargazers_count}}</p>
+          </div>
+          <div class="col-md-6 d-flex justify-content-center">
+            <img src="../../assets/fork.png" class="icon">
+            <p> {{rep.forks}}</p>
+          </div>
         </div>
       </div>
 
-      <div class="row">
+      <div class="col">
         <div class="title">
           <h4>{{rep.name}}</h4>
           <p><span>Linguagem:</span> {{rep.language}}</p>
-          <p><span>Descrição:</span> {{rep.description}}</p>
+          <p><span>Descrição:</span> {{rep.description | slice: 0: 200}}</p>
         </div>
       </div>
     </div>
+
+
   </div>
 </div>
