--- a/src/app/repositories-list/repositories-list.component.html
+++ b/src/app/repositories-list/repositories-list.component.html
@@ -14,11 +14,11 @@
       <div class="col">
         <div class="row d-flex justify-content-center">
           <div class="col-md-6 d-flex justify-content-center">
-            <img src="../../assets/images/star.png" class="icon">
+            <img src="./assets/images/star.png" class="icon">
             <p> {{rep.stargazers_count}}</p>
           </div>
           <div class="col-md-6 d-flex justify-content-center">
-            <img src="../../assets/images/fork.png" class="icon">
+            <img src="./assets/images/fork.png" class="icon">
             <p> {{rep.forks}}</p>
           </div>
         </div>
