--- a/src/app/pull-requests/pull-requests.component.html
+++ b/src/app/pull-requests/pull-requests.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <img src="../../assets/images/back.png" (click)="goBack()" class="goBack"> 
+    <img src="./assets/images/back.png" (click)="goBack()" class="goBack"> 
 
   <div class="row">
 
